--- a/CSS/style.css
+++ b/CSS/style.css
@@ -534,6 +534,10 @@ span {
   transition: 0.3s;
 }
 
+.certificates h2 {
+  margin-bottom: 4rem;
+}
+
 /*============================== design page contact ==============================*/
 .contact h2 {
   margin-bottom: 3rem;
